--- a/index.html
+++ b/index.html
@@ -14,7 +14,93 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
   </head>
+
   <body>
-    
+    <div class="container">
+      <div class = "col-md-8">
+        <h1>Shopping Cart</h1>
+          <div class="table-calculate">
+                <h2>Total Price: $<span id="totalPrice">0.00</span></h2>
+                <button type="button" class="btn btn-top btn-warning" id="calculateTotal">Calculate Prices</button>
+                 <!--<button type="button" class="btn btn-top btn-info" id="sortByAlph">Sort by Alphabets</button>-->
+          </div>
+
+        <!--Shopping Cart Table-->
+        <div class="cart table-responsive">
+        <table class="table table-cart table-hover">
+          <thead>
+            <tr>
+              <th>Item Name</th>
+              <th>Price</th>
+              <th>Quantity</th>
+              <th>Total Price</th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <tr class="itemRow">
+              <td>Salmon</td>
+              <td class="itemPrice">$60.00</td>
+              <td>
+                <form class="form-inline">
+                  <div class="form-group">
+                    <div class="input-group">
+                      <span class="input-group-addon">QTY</span>
+                      <input type="text" class="form-control itemQuantity" placeholder="Amount">
+                    </div>
+                     <button type="button" class="btn btn-default btn-cancel">Cancel</button>
+                   </div>
+                </form>
+              </td>
+              <td class="itemTotal">$0.00</td>
+            </tr>
+
+            <tr class="itemRow">
+              <td>Tuna</td>
+              <td class="itemPrice">$50.00</td>
+              <td>
+                <form class="form-inline">
+                  <div class="form-group">
+                    <div class="input-group">
+                      <span class="input-group-addon">QTY</span>
+                      <input type="text" class="form-control itemQuantity" placeholder="Amount">
+                    </div>
+                     <button type="button" class="btn btn-default btn-cancel">Cancel</button>
+                   </div>
+                </form>
+              </td>
+              <td class="itemTotal">$0.00</td>
+            </tr>
+
+            <tr class="itemRow">
+              <td>Carp</td>
+              <td class="itemPrice">$40.00</td>
+              <td>
+              <form class="form-inline">
+                <div class="form-group">
+                <div class="input-group">
+                  <span class="input-group-addon">QTY</span>
+                  <input type="text" class="form-control itemQuantity" placeholder="Amount">
+                </div>
+                 <button type="button" class="btn btn-default btn-cancel">Cancel</button>
+               </div>
+               </form>
+              </td>
+              <td class="itemTotal">$0.00</td>
+            </tr>
+          </tbody>
+        </table>
+        </div>
+        <!--Shopping Cart Table END-->
+      </div>
+
+      <div class="table-create col-md-4">
+        <h2>Create New Item</h2>
+        <input type="text" class="form-control " id="createItemName" placeholder="Item Name">
+        <input type="text" class="form-control " id="createItemPrice" placeholder="Price">
+        <button type="button" class="btn btn-success btn-block" id="btn-createItem">Create</button>
+      </div>
+
+    </div>
   </body>
 </html>
