--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
+    <title> It's time to shop!</title>
   </head>
   <body>
     <section class="container">
@@ -27,7 +28,7 @@
     <section id="items-list" class="container">
       <div class="item row">
         <div class="item-name col-xs-4">
-          Salmon
+          Meat
         </div>
         <div class="item-price col-xs-3">
           $60.00
@@ -35,7 +36,7 @@
         <div class="item-qty col-xs-3">
           <label>QTY</label>
           <input class="quantity" value="0">
-          <button class="cancel">Cancel</button>
+          <button id="cancel" class="btn btn-danger">Cancel</button>
         </div>
         <div class="item-subtotal col-xs-2">
           $0.00
@@ -49,7 +50,7 @@
           <input id="new-item-unit-price">
         </div>
         <div class="col-xs-3">
-          <button id="new-item-create">Create</button>
+          <button id="new-item-create" class="btn btn-primary">Create</button>
         </div>
       </div>
       <div class="item row">
