--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     <section id="items-list" class="container">
       <div class="item row">
         <div class="item-name col-xs-4">
-          Meat
+          Meatball
         </div>
         <div class="item-price col-xs-3">
-          $60.00
+          $20.00
         </div>
         <div class="item-qty col-xs-3">
           <label>QTY</label>
