--- a/index.html
+++ b/index.html
@@ -9,12 +9,65 @@
     <meta name="author" content="">
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="js/application.js"></script>
+
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
   </head>
+
   <body>
-    
+    <h1>Link's Shopping Cart</h1>
+
+    <!-- Set up main table for items -->
+    <div class="row">
+      <div id=parent class="col-xs-12">
+        <div id="item" class="col-xs-3 col-xs-offset-1">
+        </div>
+        <div id="price" class="col-xs-3 col-xs-offset-0">
+        </div>
+        <div id="order" class="col-xs-3 col-xs-offset-0">
+          <!-- Insert 3 more columns within order, 3-6-3 -->
+            <div id="Qty" class="col-xs-3 col-xs-offset-0">
+
+            </div>
+            <div id="insertQty" class="col-xs-6 col-xs-offset-0">
+            </div>
+            <div id="clear" class="col-xs-3 col-xs-offset-0">
+            </div>
+        </div>
+        <div id="subtotal" class="col-xs-1 col-xs-offset-0">
+        </div>
+      </div>
+
+      <!-- Set up area to add new items -->
+      <div class="row">
+        <div class="col-xs-3 col-xs-offset-1">
+          <input id="newItemEntry" type="text" class="form-control textEntry" placeholder="Item">
+        </div>
+        <div id="newPrice" class="col-xs-3 col-xs-offset-0">
+          <!-- Insert number input -->
+          <input id="newPriceEntry" type="integer" class="form-control numberEntry" placeholder="Price">
+        </div>
+        <!-- Buton to add the item -->
+        <div id="newButton" class="col-xs-2 col-xs-offset-0">
+          <input id="addNewButton" class="btn btn-default" type="submit" value="Add New">
+        </div>
+        <!-- Include Calculate Prices Button -->
+        <div id="calcTotal" class="col-xs-2 col-xs-offset-0">
+          <input id="calcTotalButton" class="btn btn-default" type="submit" value="Calculate Total">
+        </div>
+      </div>
+    <!-- END OF MAIN TABLE -->
+    </div>
+
+
+    <!-- Display Total Price -->
+
+    <div>
+      <h2>Total Price</h2>
+      <h2 id="totalhere"></h2>
+    </div>
+
+    <script src="js/application.js"></script>
   </body>
 </html>
