--- a/index.html
+++ b/index.html
@@ -15,6 +15,44 @@
     <link href="css/custom.css" rel="stylesheet">
   </head>
   <body>
-    
+    <h1>Shopping Cart</h1>
+    <div class='container'>
+    <!-- Table Header -->
+     <!--  <div class='row'>
+        <div class='col-sm-3'>Item</div>
+        <div class='col-sm-3'>Price</div>
+        <div class='col-sm-3'>QTY</div>
+        <div class='col-sm-3'>Amount</div>
+      </div> -->
+    <!-- Enter field + button -->
+      <div id='buttonrow' class='row'>
+
+          <div class='col-xs-3'>
+            <input id='item'>
+          </div>
+          <div class='col-xs-3'>
+            <input id='price'>
+          </div>
+          <div class='col-xs-3'>
+            <button id='create'>Create</button>
+          </div>
+
+      </div>
+      <div class='row'>
+        <div class='col-xs-3 col-xs-offset-9'>
+          <button id='calculate' class='btn btn-success'>Calculate Prices</button>
+        </div>
+      </div>
+      <div class='row'>
+        <div class='col-xs-12'>
+          <h1>Total Price:</h1>
+          <h1 id='total-price'> $0.00 </h1>
+        </div>
+      </div>
+    </div>
+    <!-- End of Table -->
+
+    <!-- Price calculation -->
+
   </body>
 </html>
