some button yet working

--- a/index.html
+++ b/index.html
@@ -15,6 +15,52 @@
     <link href="css/custom.css" rel="stylesheet">
   </head>
   <body>
-    
+    <div class="header col-md-offset-2">
+      <h1> Welcome to scam market</h1>
+      <h5>Enjoy your experience being scammed</h5>
+    </div>
+      <h2 class="col-md-offset-2">Shopping Cart</h2>
+    <div class="container">
+    <div class="row show-grid" id="salmon">
+      <div class="col-md-3 item">Salmon</div>
+      <div class="col-md-3">$<span class="unitprice">80</span></div>
+      <div class="col-md-4"><input class="qty" type="integer" value="0">
+        <button class="btn cancelButton">Cancel</button>
+      </div>
+      <div class="col-md-2">$<span class="subtotal">80.00</span></div>
+    </div>
+    <div class="row show-grid" id="onion">
+      <div class="col-md-3 item">Onion</div>
+      <div class="col-md-3">$<span class="unitprice">30</span></div>
+      <div class="col-md-4"><input class="qty" type="integer" value="0">
+        <button class="btn cancelButton">Cancel</button>
+      </div>
+      <div class="col-md-2">$<span class="subtotal">60.00</span></div>
+    </div>
+    <div class="row show-grid" id="pork">
+      <div class="col-md-3 item">Pork</div>
+      <div class="col-md-3">$<span class="unitprice">30</span></div>
+      <div class="col-md-4"><input class="qty" type="integer" value="0">
+        <button class="btn cancelButton">Cancel</button>
+      </div>
+      <div class="col-md-2">$<span class="subtotal">60.00</span></div>
+    </div>
+    <div class="row show-grid" id="createrow">
+      <div class="col-md-3 item"><input type="string" placeholder="Type name..." id="new-item"></div>
+      <div class="col-md-3">$<input type="integer" placeholder="Input unit price..." id="new-unitprice"></div>
+      <div class="col-md-4">
+        <button class="btn createButton">Create</button>
+      </div>
+      <div class="col-md-2"></div>
+    </div>
+    </div>
+
+  <div class="col-md-3 col-md-offset-8">
+    <button class="btn btn-large btn-primary" type="button">Calculate Price</button>
+
+    <p>Total Price</p>
+    <p class="totalprice">$0.00</p>
+  </div>
+
   </body>
 </html>
